// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Renders correctly 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "borderRadius": 8,
      "flex": 1,
      "justifyContent": "space-between",
      "marginHorizontal": 20,
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 80,
      "width": 600,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#ecf0f1",
          "fontFamily": "OpenSans-Bold",
          "fontSize": 24,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#ecf0f1",
          "fontFamily": "IndieFlower",
          "fontSize": 22,
        },
        undefined,
      ]
    }
  >
    @designhumor
  </Text>
</View>
`;

exports[`Renders Renders with IconButton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "borderRadius": 8,
      "flex": 1,
      "justifyContent": "space-between",
      "marginHorizontal": 20,
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 80,
      "width": 600,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#ecf0f1",
          "fontFamily": "OpenSans-Bold",
          "fontSize": 24,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ecf0f1",
            "fontFamily": "IndieFlower",
            "fontSize": 22,
          },
          undefined,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      @designhumor
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        name="trash"
        size={20}
      />
    </View>
  </View>
</View>
`;
